Fix filterDropdownMenu z-index
justify-self doesn’t exist

Ensure it doesn’t overlay quickNote popover

--- a/src/clientFilePage/filterBar.styl
+++ b/src/clientFilePage/filterBar.styl
@@ -62,7 +62,7 @@
 	.filterDropdownMenu
 		font-size 1em
 		position relative
-		z-index 9999
+		z-index 1059 // Under quickNote popover
 		max-width 150px
 
 		.option
@@ -81,7 +81,6 @@
 
 		.selectedValue
 			flex 1
-			justify-self flex-end
 			font-weight 600
 
 			&:hover .value
